# infrastructure

./: .env  .gitignore  .gitmodules  .infracost.yml  .mypy.ini  .pytest.toml  .ruff.toml  README.md  SECURITY.md  dagger.json  infracost.yml  mypy.ini  pylock.toml  pyproject.toml  requirements-dev.txt  ruff.toml
.dagger/: README.md  pyproject.toml  ruff.toml
.dagger/src/infra_dagger/: __init__.py  terraform.py
.dagger/src/infrastructure/: __init__.py  main.py
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/config/: changed_files.yml  labeler.yml  yamllint.yml
.github/workflows/: ansible.yml  autolabel.yml  conventional_commits.yml  conventional_pull_requests.yml  conventional_tags.yml  docker.yml  markdown.yml  python.yml  shell.yml  stale.yml  tag_commit.yml  terraform.yml  yaml.yml
ansible/: .gitignore  ansible.cfg  pyproject.toml  requirements.yml
ansible/collections/caseysparkz/environment/: galaxy.yml
ansible/collections/caseysparkz/environment/roles/git/files/git_template/template_files/: .gitignore  coveragerc.toml  mypy.ini  pyproject.toml  pytest.toml  ruff.toml  yamllint.yml
ansible/collections/caseysparkz/environment/roles/git/files/git_template/template_files/.github/config/: yamllint.yml
ansible/collections/caseysparkz/environment/roles/git/files/git_template/template_files/.github/workflows/: autolabel.yml  conventional_commits.yml  python.yml  shell.yml  terraform.yml
ansible/host_vars/localhost/: main.yml  vault.yml
caseyspar.kz/: .terraform.lock.hcl  README.md  cloudflare.tf  github.tf  main.tf  mikrotik.tf  prod.auto.tfvars  production.tfvars  providers.tf  variables.tf
caseyspar.kz/docker_compose/: alpine3:0.0.1.docker-compose.yml  debian12:0.0.1.docker-compose.yml  python3.11:0.0.1.docker-compose.yml
caseyspar.kz/frontend/public/: 404.html  index.html  index.xml  sitemap.xml
caseyspar.kz/frontend/public/about/: index.html
caseyspar.kz/frontend/public/categories/: index.html  index.xml
caseyspar.kz/frontend/public/categories/code/: index.html  index.xml
caseyspar.kz/frontend/public/categories/music/: index.html  index.xml
caseyspar.kz/frontend/public/code/: index.html  index.xml
caseyspar.kz/frontend/public/code/bootstrapping_a_daily_driver_linux_environment_with_ansible/: index.html
caseyspar.kz/frontend/public/contact/: index.html
caseyspar.kz/frontend/public/music/: index.html  index.xml
caseyspar.kz/frontend/public/music/2019-02/: index.html
caseyspar.kz/frontend/public/music/2019-04/: index.html
caseyspar.kz/frontend/public/music/2019-06/: index.html
caseyspar.kz/frontend/public/music/2019-08/: index.html
caseyspar.kz/frontend/public/music/2019-10/: index.html
caseyspar.kz/frontend/public/music/2019-12/: index.html
caseyspar.kz/frontend/public/resume/: index.html  index.xml
caseyspar.kz/frontend/public/tags/: index.html  index.xml
caseyspar.kz/frontends/www/: config.yml  package-lock.json
caseysparkz.com/: .terraform.lock.hcl  README.md  cloudflare.tf  main.tf  production.tfvars  providers.tf  variables.tf
caseysparkz.com/ecr/: .terraform.lock.hcl  main.tf  providers.tf
caseysparkz.com/frontends/www/: config.yml  package-lock.json  package.json  theme.yml
centripedalporch.com/: cloudflare.tf  main.tf  providers.tf  variables.tf
com/caseysparkz/: .terraform.lock.hcl  README.md  cloudflare.tf  kms.tf  main.tf  production.tfvars  providers.tf  variables.tf
com/caseysparkz/ecr/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
com/caseysparkz/ecr/docker_compose/: python3.11:0.0.1.docker-compose.yml
com/caseysparkz/eks/: .terraform.lock.hcl  iam.tf  infracost_usage.yml  kubernetes.tf  main.tf  network.tf  providers.tf  variables.tf
com/caseysparkz/eks/tfvars/: prod
com/caseysparkz/home/: .terraform.lock.hcl  ap01.tf  main.tf  providers.tf  sw01.tf  variables.tf
com/caseysparkz/photos/: providers.tf
com/caseysparkz/store/: .terraform.lock.hcl  iam.tf  main.tf  providers.tf  variables.tf
com/caseysparkz/www/: .terraform.lock.hcl  main.tf  providers.tf
com/caseysparkz/www/files/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
com/caseysparkz/www/frontend/: config.yml
docker/: alpine3.Dockerfile  alpine3:0.0.1.compose.yml  debian12.Dockerfile  debian12:0.0.1.compose.yml  python3.11.Dockerfile  python3.11:0.0.1.compose.yml
modules/aws_budget/: .terraform.lock.hcl  budgets.tf  main.tf  providers.tf  variables.tf
modules/cloudflare_dns_zone/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
modules/ecr/: .terraform.lock.hcl  docker.tf  ecr.tf  kms.tf  main.tf  providers.tf  variables.tf
modules/forward_zones/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
modules/hugo_static_site/: .terraform.lock.hcl  cloudflare.tf  cloudwatch.tf  iam.tf  lambda.tf  lambda_contact_form.py  main.tf  null_resource.tf  providers.tf  s3.tf  ses.tf  variables.tf
modules/hugo_static_site/tests/: test_lambda_contact_form.py
modules/proton_domain/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
modules/s3_artifacts/: .terraform.lock.hcl  kms.tf  main.tf  outputs.tf  providers.tf  s3.tf  variables.tf
modules/tfstate/: kms.tf  main.tf  providers.tf  s3.tf  variables.tf
terraform/: .gitignore  infracost.yml
terraform/com/caseysparkz/: main.tf
terraform/com/caseysparkz/ecr/: main.tf  variables.tf
terraform/com/caseysparkz/photos/: main.tf
terraform/com/caseysparkz/store/: main.tf
terraform/com/caseysparkz/www/: main.tf
terraform/modules/aws_resourcegroup_by_tagset/tests/: providers.tftest.hcl  resourcegroups_group.tftest.hcl
terraform/modules/cloudflare_dns_zone/: providers.tf  variables.tf
terraform/modules/ecr/: docker.tf  ecr.tf  providers.tf
terraform/modules/hugo_static_site/: s3.tf
terraform/modules/hugo_static_site/tests/: test_lambda_contact_form.py
tfstate/: .terraform.lock.hcl  main.tf  providers.tf  s3.tf  variables.tf
tfstate_backend/: infracost_usage.yml  kms.tf  prod.auto.tfvars  providers.tf  s3.tf  variables.tf
(+147 files in other folders)
