[project]
name = "infrastructure"
version = "0.1.0"
requires-python = ">=3.13"
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = [
    "boto3==1.*",
]

[project.optional-dependencies]
dev = [
    "ipython==9.*",
    "ruff==0.*",
    #"dagger_infrastructure @ file:///Users/caseysparks/Documents/git/caseysparkz/infrastructure/.dagger",
]
test = [
    "mypy==1.*",
    "pytest==9.*",
    "ruff==0.*",
]

[tool.setuptools.packages.find]
where = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Tools ========================================================================
# MyPy -------------------------------------------------------------------------
[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Ruff -------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
exclude = [
    "**/node_modules/**/*.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
    "ANN1",     # flake8-annotations::missing-type-*
    "COM812",   # flake8-commas::missing-trailing-comma
    "FIX002",   # flake8-fixme::line-contains-todo
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10  # `C901` when complexity > 10.

[tool.ruff.lint.per-file-ignores]
"test_*.py"=[
    "INP001",   # flake8-no-pip420::implicit-namespace-package
    "D1",       # pydocstyle::undocumented-*
    "ANN201",   # flake8-annotations::missing-return-type-undocumented-public-function
    "S101",     # flake8-bandit::assert
]
