[project]
name = "infrastructure"
version = "0.1.0"
requires-python = ">=3.13"
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = [
    "boto3==1.*",
]

[project.optional-dependencies]
dev = [
    "ipython==9.*",
    "ruff==0.*",
    #"dagger_infrastructure @ file:///Users/caseysparks/Documents/git/caseysparkz/infrastructure/.dagger",
]
test = [
    "mypy==1.*",
    "pytest==9.*",
    "ruff==0.*",
]

[tool.setuptools.packages.find]
where = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
