[project]
name = "infrastructure"
version = "0.1.0"
requires-python = ">=3.13"
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = [
    "boto3==1.43.36",
    "types-boto3[ses]",
]

[project.optional-dependencies]
dev = [
    "ipython==9.15.0",
    "ruff==0.15.20",
]
test = [
    "boto3-stubs==1.43.36",
    "botocore-stubs==1.43.14",
    "ipython==9.15.0",
    "moto==5.2.2",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "pytest-cov==7.1.0",
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.setuptools.packages.find]
where = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Tools ========================================================================
# Misc. -----------------------------------------------------------------------
[tool.ipdb]
context = 20

# MyPy -------------------------------------------------------------------------
[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Ruff -------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
exclude = [
    "**/node_modules/**/*.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
    "ANN1",     # flake8-annotations::missing-type-*
    "COM812",   # flake8-commas::missing-trailing-comma
    "FIX002",   # flake8-fixme::line-contains-todo
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10  # `C901` when complexity > 10.

[tool.ruff.lint.per-file-ignores]
"**/test_*.py"=[
    "ANN201",   # flake8-annotations::missing-return-type-undocumented-public-function
    "D1",       # pydocstyle::undocumented-*
    "INP001",   # flake8-no-pip420::implicit-namespace-package
    "PLR2004",  # pylint::magic-value-comparison
    "S101",     # flake8-bandit::assert
]

# PyTest -----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--cov=.",
    "--cov-fail-under=95",
    "--cov-report=term-missing",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
testpaths = ["."]

[tool.coverage.run]
omit = [
    "**/test_*.py",
    "**/tests/**/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "LOG\\.",
]
