[project]
name = "{TODO}"
version = "0.1.0"
requires-python = ">=3.14"
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = []

[project.optional-dependencies]
dev = [  # TODO: version
    "ipython",
    "ruff",
]
test = [  # TODO: version
    "mypy",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
