[project]
name = "{TODO}"
description = "{TODO}"
requires-python = ">=3.14"
version = "0.1.0"
readme = { file = "README.md", content-type = "text=markdown" }
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
]
test = [
    "ipython",
    "mypy",
    "pip-audit",
    "pytest-cov",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = []

[build-system]
build-backend = "setuptools.build_meta"
requires-python = ">= 3.13"
requires = ["setuptools"]

# Tools ========================================================================
# Misc. -----------------------------------------------------------------------
[tool.ipdb]
context = 20
